# HotSpotAnalyzer

./: .gitignore  Makefile  README.md  package-lock.json
analyze/: Makefile  README.md  analyze.py  apis.py  cluster.py  config.yaml  convert_knowledge_graph.py  pyproject.toml  readme.md
analyze/cluster_and_event_graph/: README.md  analyze.py  apis.py  build_event_graph.py  cluster.py  convert_knowledge_graph.py
analyze/cluster_and_event_graph/documents/: example.json
analyze/crawler/WeiboCrawler/: convert_to_json_OneMonth.py
analyze/crawler/weibo_crawler/: README.md  WeiboCnTopicSpiderWithoutCookie.py  comment_config.json  convert_to_json_OneMonth.py  requirements.txt  weibo_topic_subtopic.py  wid_num.py
analyze/documents/: analyze_result_0527.json  analyze_result_history.json  api_key.json  cluster_results.json  data_2024-05-27.json
analyze/event/: analyze.py  apis.py
analyze/event/documents/: 3d_force_graph.json  graph.json
analyze/sentiment/: README.md  analyze_add.py  post_senti.py
analyze/sentiment/sentiment_result/: README.md  analyze_result_with_sentiment_0527.json  sentiments_counts_eng.json
analyze/wordcount/: README.md  stopwords.txt  title_wordcount_jieba.py  title_wordcount_keybert.py
analyze/wordcount/title_count_data_2024-05-27_jieba/: 13_6岁男童声音沙哑查出HPV感染，手术治疗效果显著_wordcount.csv  15_中山大学百年校庆龙舟赛【友谊的小船】_wordcount.csv  18_蚊子绝育工厂：控制蚊子数量_wordcount.csv  5_广东发现蕨类植物新种"国达铁角蕨"_wordcount.csv
analyze/wordcount/title_count_data_2024-05-27_keybert/: 12_口腔溃疡的自愈与治疗_wordcount.csv  13_6岁男童声音沙哑查出HPV感染，手术治疗效果显著_wordcount.csv  15_中山大学百年校庆龙舟赛【友谊的小船】_wordcount.csv  18_蚊子绝育工厂：控制蚊子数量_wordcount.csv  19_no_title__default_wordcount.csv  2_中山眼科中心专家团队介绍_wordcount.csv  6_21岁女孩直博中国农大，父母教育观念感人【大象新闻】_wordcount.csv
analyze/wordcount/wordcount_result/: README.md
backend/: README.md  manage.py  pyproject.toml
backend/analyze/: README.md  apis.py  build_event_graph.py  cluster.py  convert_knowledge_graph.py
backend/application/: settings.py  urls.py
backend/apps/system/: views.py
backend/config/: conf.py
backend/server/: settings.py
crawler/: README.md  pyproject.toml
crawler/buildTables/: crawler.sql  media_crawler_test.sql  weibo_test.sql
crawler/weibocrawler/: crawler.py  predictor.py
(+285 files in other folders)
