[tool.poetry]
name = "analyze"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pymysql = "^1.1.1"
pyquery = "^2.0.0"
selenium = "^4.22.0"
pandas = "^2.2.2"
modelscope = "1.14.0"
jieba = "^0.42.1"
networkx = "^3.3"
transformers = "4.41.2"
torch = "2.1.2"
sentencepiece = "^0.2.0"
protobuf = "4.23.4"
cpm-kernels = "^1.0.11"
gradio = "4.31.5"
mdtex2html = "^1.3.0"
accelerate = "0.30.1"
tokenizers = "0.19.1"
sentence-transformers = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
