[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["huwf5 <huwf5@mail2.sysu.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
mysqlclient = "^2.2.4"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
numpy = "^2.0.0"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
